--- a/project_boostrap/api_food/templates/api_food/pages/home.html
+++ b/project_boostrap/api_food/templates/api_food/pages/home.html
@@ -3,5 +3,22 @@
 {% block title %}Home{% endblock title %} 
 
 {% block content %}
-<h1 class="teste123">Bom dia Familia</h1>
+<div class="container-search">  
+    <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Procurar" aria-label="Procurar">
+        <button class="btn btn-outline-success" type="submit">Procurar</button>
+    </form>
+</div>
+
+<div class="container-layout-empresas">
+    <div class="container-empresas">
+        {% for empresa in empresas %}
+            {% include 'api_food/partials/empresa_lowprofile.html' %}
+        {% endfor %}
+        
+    
+
+    </div>
+</div>
+
 {% endblock content %}
