--- a/project_boostrap/base_static/global/css/base_style.css
+++ b/project_boostrap/base_static/global/css/base_style.css
@@ -48,13 +48,13 @@
 }
 
 html {
-    font-size: 62.5%;
+    font-size: 80.5%;
 }
 
 body {
     font-size: 1.6rem;
     font-family: var(--font-primary);
-    background: var(--color-gray-1);
+    background: var(--color-gray-7);
 }
 
 h1,
@@ -66,6 +66,47 @@ h6 {
     font-family: var(--font-headings);
 }
 
-.teste123 {
-    color: red;
+.container-search{
+    margin: var(--spacing-gutter-medium);
+}
+
+.container-empresas {
+    display: flex;
+    flex-wrap: wrap;
+}
+  
+.empresa {
+    width: calc(100% / 3);
+    padding: 10px;
+    transform: scale(1);
+    transition: all 300ms ease-in-out;
+    border-radius: .7rem;
+    overflow: hidden;
+}
+
+.empresa:hover {
+    box-shadow: -5px 5px 10px rgba(0,0,0,0.2);
+}
+  
+.content-empresa {
+    display: flex;
+    align-items: center;
+}
+  
+.empresa-img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    margin-right: 10px;
+}
+  
+.empresa-info {
+    flex-grow: 1;
+}
+  
+.empresa a {
+    font-size: small;
+    color: var(--color-primary);
+    transition: all 250ms ease-in-out;
+    text-decoration: none;
 }
